# reef-knowledge

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: build-installers.yml
data/wiki/: 书记精华_1-2.md  书记精华_11-12.md  书记精华_13-14.md  书记精华_3-4.md  书记精华_5-6.md  书记精华_7-8.md  书记精华_9-10.md  海水鱼常见疾病大全_1-2.md  海水鱼常见疾病大全_11-12.md  海水鱼常见疾病大全_13-14.md  海水鱼常见疾病大全_3-4.md  海水鱼常见疾病大全_5-6.md  海水鱼常见疾病大全_7-8.md  海水鱼常见疾病大全_9-10.md  知识库文章_1-2.md  知识库文章_11-13.md  知识库文章_3-4.md  知识库文章_5-6.md  知识库文章_7-8.md  知识库文章_9-10.md
scripts/: make_placeholder_icons.py  patch_android_manifest.py  verify_parity.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  seed.rs  state.rs
src-tauri/src/commands/: dialogue.rs  health.rs  layers.rs  llm_settings.rs  meta.rs  mod.rs  tasks.rs  wiki_embedding.rs
src-tauri/src/config/: settings.rs
src-tauri/src/llm/: client.rs  config.rs  mod.rs  strip.rs  tasks.rs  test.rs
src-tauri/src/models/: common.rs  embedding.rs  mod.rs  recall.rs  settings.rs  tasks.rs
src-tauri/src/recall/: bm25.rs  chunking.rs  merge.rs  mod.rs  pipeline.rs  stopwords.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/vector_index/: mod.rs
src-tauri/tests/: parity_test.rs
src/lib/: ipc.ts  types.ts
src/styles/: index.css
