[package]
name = "reef-knowledge"
version = "0.1.0"
description = "「海洋知识库」桌面/移动端应用（Tauri 2 + Rust 后端）。"
authors = ["reef-knowledge"]
edition = "2021"
rust-version = "1.77"

# 同时构建 staticlib（移动端）/ cdylib（移动端）/ rlib（桌面）
[lib]
name = "reef_knowledge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

# 序列化 / 时间 / 错误
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# 异步 / HTTP / 文件
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "time", "io-util"] }
async-openai = "0.27"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# 工具
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
hex = "0.4"
regex = "1"
once_cell = "1"
unicode-segmentation = "1"
encoding_rs = "0.8"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"

[features]
# 默认编译目标：桌面三端
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
